[package]
name = "agcodex-execpolicy"
version = { workspace = true }
description = "Sandboxing and execution policy enforcement"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-execpolicy"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }
edition.workspace = true

[[bin]]
name = "agcodex-execpolicy"
path = "src/main.rs"

[lib]
name = "agcodex_execpolicy"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
starlark = { workspace = true }
allocative = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display"] }
env_logger = { workspace = true }
log = { workspace = true }
multimap = "0.10.0"
path-absolutize = "3.1.1"
regex-lite = "0.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.142"
serde_with = { version = "3", features = ["macros"] }

[dev-dependencies]
tempfile = "3.13.0"
