[package]
edition.workspace = true
name = "agcodex-file-search"
version = { workspace = true }
description = "Enhanced file search with tree-sitter AST and fd-find integration"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-file-search"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }

[[bin]]
name = "agcodex-file-search"
path = "src/main.rs"

[lib]
name = "agcodex_file_search"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
