[package]
edition.workspace = true
name = "agcodex-linux-sandbox"
version = { workspace = true }
license = { workspace = true }

[[bin]]
name = "agcodex-linux-sandbox"
path = "src/main.rs"

[lib]
name = "agcodex_linux_sandbox"
path = "src/lib.rs"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
clap = { workspace = true, features = ["derive"] }
agcodex-common = { path = "../common", features = ["cli"] }
agcodex-core = { path = "../core" }
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
