[package]
edition.workspace = true
name = "agcodex-mcp-server"
version = { workspace = true }
description = "Model Context Protocol server mode for AGCodex"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-mcp-server"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }

[[bin]]
name = "agcodex-mcp-server"
path = "src/main.rs"

[lib]
name = "agcodex_mcp_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
agcodex-arg0 = { path = "../arg0" }
agcodex-common = { path = "../common", version = "0.1.0" }
agcodex-core = { path = "../core", version = "0.1.0" }
agcodex-login = { path = "../login", version = "0.1.0" }
agcodex-protocol = { path = "../protocol", version = "0.1.0" }
agcodex-mcp-types = { path = "../mcp-types", version = "0.1.0" }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
mcp_test_support = { path = "tests/common" }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
