[package]
edition.workspace = true
name = "mcp-types"
version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true, features = ["serde-json-impl"] }
