[package]
edition.workspace = true
name = "agcodex-ollama"
version = { workspace = true }
license = { workspace = true }

[lib]
name = "agcodex_ollama"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
bytes = { workspace = true }
agcodex-core = { path = "../core" }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }
wiremock = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
