[package]
edition.workspace = true
name = "agcodex-ollama"
version = { workspace = true }
description = "Ollama integration for local LLM support"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-ollama"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }

[lib]
name = "agcodex_ollama"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
bytes = { workspace = true }
agcodex-core = { path = "../core", version = "0.1.0" }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }
wiremock = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
