[package]
name = "agcodex-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Serialization formats
bincode = { workspace = true }
rmp-serde = "1.3"                                  # MessagePack
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
zstd = "0.13"

# Storage optimization
memmap2 = "0.9"

# Core dependencies
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# Async runtime
tokio = { version = "1.42", features = ["fs", "io-util", "sync", "rt", "time"] }

# Path handling
dirs = { workspace = true }

# File system utilities
tempfile = "3.14"

# Logging
tracing = "0.1"

# Internal dependencies
agcodex-core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
proptest = "1.6"
tempfile = "3.14"
