[package]
edition.workspace = true
name = "codex-protocol-ts"
version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
name = "codex_protocol_ts"
path = "src/lib.rs"

[[bin]]
name = "codex-protocol-ts"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
codex-protocol = { path = "../protocol" }
ts-rs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
