[package]
edition.workspace = true
name = "agcodex-protocol-ts"
version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
name = "agcodex_protocol_ts"
path = "src/lib.rs"

[[bin]]
name = "agcodex-protocol-ts"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
agcodex-protocol = { path = "../protocol" }
ts-rs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
