[package]
edition.workspace = true
name = "codex-protocol"
version = { workspace = true }
license = { workspace = true }

[lib]
name = "codex_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mcp-types = { path = "../mcp-types" }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
ts-rs = { workspace = true, features = ["uuid-impl", "serde-json-impl"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
