[package]
edition.workspace = true
name = "agcodex-protocol"
version = { workspace = true }
description = "Communication protocol definitions for AGCodex"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-protocol"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }

[lib]
name = "agcodex_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
agcodex-mcp-types = { path = "../mcp-types", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
ts-rs = { workspace = true, features = ["uuid-impl", "serde-json-impl"] }
uuid = { workspace = true, features = ["serde", "v4"] }
pretty_assertions = { workspace = true }

[dev-dependencies]
