[package]
edition.workspace = true
name = "agcodex-tui"
version = { workspace = true }
license = { workspace = true }

[[bin]]
name = "agcodex-tui"
path = "src/main.rs"

[lib]
name = "agcodex_tui"
path = "src/lib.rs"

[features]
# Enable vt100-based tests (emulator) when running with `--features vt100-tests`.
vt100-tests = []
# Gate verbose debug logging inside the TUI implementation.
debug-logs = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
agcodex-ansi-escape = { path = "../ansi-escape" }
agcodex-arg0 = { path = "../arg0" }
agcodex-common = { path = "../common", features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
agcodex-core = { path = "../core" }
agcodex-file-search = { path = "../file-search" }
agcodex-login = { path = "../login" }
agcodex-ollama = { path = "../ollama" }
agcodex-protocol = { path = "../protocol" }
color-eyre = { workspace = true }
crossterm = { workspace = true, features = ["bracketed-paste"] }
diffy = { workspace = true }
image = { workspace = true, features = ["jpeg"] }
lazy_static = { workspace = true }
agcodex-mcp-types = { path = "../mcp-types" }
once_cell = { workspace = true }
path-clean = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
ratatui-image = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
shlex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
supports-color = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tui-input = { workspace = true }
tui-markdown = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }


[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
vt100 = "0.16.2"
