[package]
categories = ["development-tools", "command-line-utilities"]
description = "Terminal User Interface for AGCodex with mode switching support"
documentation = "https://docs.rs/agcodex-tui"
edition.workspace = true
homepage = "https://github.com/agcodex/agcodex"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
license = { workspace = true }
name = "agcodex-tui"
repository = "https://github.com/agcodex/agcodex"
version = { workspace = true }

[[bin]]
name = "agcodex-tui"
path = "src/main.rs"

[lib]
name = "agcodex_tui"
path = "src/lib.rs"

[features]
# Enable vt100-based tests (emulator) when running with `--features vt100-tests`.
vt100-tests = []
# Gate verbose debug logging inside the TUI implementation.
debug-logs = []

[lints]
workspace = true

[dependencies]
agcodex-ansi-escape = { path = "../ansi-escape", version = "0.1.0" }
agcodex-arg0 = { path = "../arg0", version = "0.1.0" }
agcodex-common = { path = "../common", version = "0.1.0", features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
agcodex-core = { path = "../core", version = "0.1.0" }
agcodex-file-search = { path = "../file-search", version = "0.1.0" }
agcodex-login = { path = "../login", version = "0.1.0" }
agcodex-mcp-types = { path = "../mcp-types", version = "0.1.0" }
agcodex-ollama = { path = "../ollama", version = "0.1.0" }
agcodex-persistence = { path = "../persistence", version = "0.1.0" }
agcodex-protocol = { path = "../protocol", version = "0.1.0" }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
crossterm = { workspace = true, features = ["bracketed-paste"] }
diffy = { workspace = true }
dirs = { workspace = true }
fuzzy-matcher = "0.3"
image = { workspace = true, features = ["jpeg"] }
lazy_static = { workspace = true }
nucleo-matcher = { workspace = true }
once_cell = { workspace = true }
path-clean = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
ratatui-image = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
shlex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
supports-color = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tui-input = { workspace = true }
tui-markdown = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }


[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
vt100 = "0.15"

[[example]]
name = "session_browser_demo"
path = "examples/session_browser_demo.rs"
