[package]
edition.workspace = true
name = "mcp_test_support"
version = { workspace = true }
license = { workspace = true }

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
agcodex-core = { path = "../../../core" }
agcodex-mcp-server = { path = "../.." }
agcodex-protocol = { path = "../../../protocol" }
agcodex-mcp-types = { path = "../../../mcp-types" }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
] }
uuid = { workspace = true, features = ["serde", "v4"] }
wiremock = { workspace = true }
